@startuml

class Program
{
    + Main() : void
}

class ScriptureLibrary
{
    - _scriptures : List<Scripture>
    - _random : Random
    --
    + ScriptureLibrary(filePath : string)
    - LoadScriptures(filePath : string) : void
    + GetRandomScripture() : Scripture
}

class Scripture
{
    - _reference : Reference
    - _words : List<Word>
    - _random : Random
    --
    + Scripture(reference : Reference, text : string)
    + Display() : void
    + HideRandomWords(count : int) : void
    + IsCompleted() : bool
}

class Reference
{
    - _location : string
    - _text : string
    --
    + Reference(location : string, text : string)
    + GetLocation() : string
    + GetText() : string
}

class Word
{
    - _text : string
    - _isHidden : bool
    --
    + Word(text : string)
    + Hide() : void
    + IsHidden() : bool
    + GetDisplayText() : string
}

Program --> ScriptureLibrary
ScriptureLibrary *-- Scripture 
Scripture *-- Reference 
Scripture *-- Word 

@enduml